----------------------------------------------------------------------
----------------------------------------------------------------------

- Fixed a rounding error with Paypal chained and Tax Inclusive pricing
- Add support for Ireland locale in paypal and not require postal code
- Add support for CAD, EUR and GBP to Authorize.net AIM gateway
- Add support for GBP to Stripe gateway

2.8.7 - 5/24/2013 - Aaron
----------------------------------------------------------------------
- Make order and payment history times adjust dynamically for the site timezone
- Add Paymill gateway (beta)
- Fix encoded discount display in confirmation emails and PayPal
- Fix products display reverting to grid in list mode when ajax filters are used
- Fix undefined filter_post_kses error for subsite admins in multisite in Manual Payments and Cubepoints gateways
- Fix a Manage Orders page pagination display bug/conflict
- Fix fatal conflict with SEO features of Genesis/Catalyst themes on category pages
- Change text of last checkout breadcrumb to "Order Complete"
- Sanitize price fields in various shipping modules
- Add New Zealand locale to paypal gateways

2.8.6 - 5/8/2013 - Aaron
----------------------------------------------------------------------
- Fix broken new order emails if % is included in product title
- Fix paypal express documentation links
- Add setting for "Collect Address on Downloadable Only Cart"
- SQL injection hardening

2.8.5 - 4/11/2013 - Aaron
----------------------------------------------------------------------
- Allow styling of global products by site (blogid in classname)
- Fix sort by price in product list widget http://wp.mu/1r5
- Fix popular products shortcode ordering
- Change Shipping form label when shipping is turned off
- Add CAD to stripe gateway
- Add Israel locale to PayPal gateway
- Fix function name conflict with WP-Client plugin
- Fix mp_product_list shortcode list_view argument

2.8.4 - 3/8/2013 - Aaron, Arnold