@@ -9,6 +9,7 @@ Change Log:
 - Add support for Ireland locale in paypal and not require postal code
 - Add support for CAD, EUR and GBP to Authorize.net AIM gateway
 - Add support for GBP to Stripe gateway
+- Fix store count on global checkout confirmaion screen
 
 2.8.7 - 5/24/2013 - Aaron
 ----------------------------------------------------------------------
